--- a/views/home.hbs
+++ b/views/home.hbs
@@ -1,5 +1,7 @@
 <h1>Home Page</h1>
 
-Search Here: <form action="/searchHere" ><input type="text" name="query" id="searchBar" /> </form><br/>
+Search Here: <form action="/search" ><input type="text" name="q" id="searchBar" /> 
+<input type="submit" value="Search" />
+</form><br/>
 
 <p>An easier way to find the parts your looking for.</p>
