--- a/views/results.hbs
+++ b/views/results.hbs
@@ -3,6 +3,6 @@
 {{#each results}}
 <h3>{{title}}</h3>
 Goes To: {{goesTo}}<br/>
-<a href="{{{link}}}">Get Details</a>
+<a href="/getEmail/{{id}}">Get Details</a>
 {{/each}}
 </ul>
